fixes bug of large headings overlaying on small mobil

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -70,9 +70,18 @@
 }
 
 @include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+    main h1 {
+        
+        &.lg-heading {
+            font-size: 3rem;
+        }
+
+        &#home {
+            margin-top: 5vh;
+        }
+
     }
+
 
     .projects {
         grid-template-columns: 1fr;
